# covc

./: .gitignore  CMakeLists.txt  LICENCE_RUS  LICENSE  LICENSE_RUS  README  TODO  covc.pro
covc/: CMakeLists.txt  covc.pro
covc/include/: covc.h  matrices_and_vectors.h  ocl.h  voxelcolorer.h
covc/ocl/: step_1_build_variety_of_hypotheses.cl  step_2_3_calculate_iteration_info.cl  step_2_3_calculate_number_of_consistent_hypotheses.cl  step_2_3_calculate_number_of_consistent_hypotheses_by_voxels.cl  step_2_initial_inconsistent_hypotheses_rejection_by_hypotheses.cl  step_2_initial_inconsistent_voxels_rejection_by_hypotheses.cl  step_3_clear_z_buffer.cl  step_3_inconsistent_voxels_rejection.cl  step_4_build_voxel_model_from_variety_of_hypotheses.cl
covc/src/: matrices_and_vectors.cpp  ocl.cpp  voxelcolorer.cpp
dependencies/: CMakeLists.txt
dependencies/CLxx/: CMakeLists.txt  Context.cpp  Kernel.h  KernelCommands.cpp  Profile.h  README
dependencies/CLxx/include/: BufferCommands.h  Context.h  Device.h  Image.h  ImageCommands.h  Memory.h  Platform.h  Program.h  fwd.h
dependencies/CLxx/src/: CommandQueue.cpp  Context.cpp  Device.cpp  Exception.cpp  Image.cpp  Program.cpp
dependencies/matrix/: CMakeLists.txt
dependencies/ocl/: README  cl.hpp
example/: CMakeLists.txt
example/clxx_example/: CMakeLists.txt  README  vector_add.cpp
example/lvc/: CMakeLists.txt  bounding_volume_calculation.cpp  jpg.cpp  lvc.cpp  pictureinfo.cpp  pictureinfo.h
example/qcovc/: CMakeLists.txt  imageinfo.cpp  imageinfo.h  imagepreview.cpp  imagepreview.h  imagescene.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcovc.pro
src/: colorer.cl  colorer.cpp  colorer.h  image.cpp  image.h  imageinfo.cpp  imageinfo.h  imagepreview.cpp  imagepreview.h  imagescene.cpp  imagescene.h  imageview.cpp  imageview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ocl.cpp  ocl.h
tools/: CMakeLists.txt
(+54 files in other folders)
